[package]
name = "dshot-pio"
version = "0.2.0"
edition = "2021"

[features]
embassy-rp = ["dep:embassy-rp"]
rp2040-hal = ["dep:rp2040-hal"]
bidirectional = ["dep:embassy-rp"]

[dependencies]
dshot-encoder = { path="../dshot-encoder" } # git = "https://github.com/peterkrull/dshot-encoder" }

pio-proc = "0.2"
pio = "0.2"

rp2040-hal = { version = "0", optional = true }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", optional = true }
